# zk-impl

./: Cargo.toml
circuit/: Cargo.toml
circuit/benches/: circuit_benchmarks.rs  criterion.rs
circuit/src/: circuit.rs  gate.rs  layer.rs  lib.rs
fiat-shamir-transcript/: Cargo.toml
fiat-shamir-transcript/benches/: fiat_shamir_transcript_benchmarks.rs
fiat-shamir-transcript/src/: transcript.rs
freivald/: Cargo.toml
freivald/src/: lib.rs  matrix.rs
gkr/: Cargo.toml
gkr/src/: lib.rs
polynomials/: Cargo.toml
polynomials/benches/: criterion.rs  mod.rs
polynomials/benches/multilinear_benchmarks/: dense.rs  evaluation.rs  mod.rs  sparse.rs
polynomials/benches/univariate_benchmarks/: dense.rs  sparse.rs
polynomials/src/: lib.rs
polynomials/src/composed/: mod.rs  product.rs  sum.rs
polynomials/src/multilinear/: dense.rs  evaluation.rs  mod.rs  sparse.rs
polynomials/src/univariate/: README.md  dense.rs  mod.rs  sparse.rs
reed-solomon-fingerprinting/: Cargo.toml
reed-solomon-fingerprinting/src/: lib.rs
shamir-secret-sharing/: Cargo.toml  README.md
shamir-secret-sharing/benches/: criterion.rs  mod.rs  sss.rs  sss_with_password.rs
shamir-secret-sharing/src/: lib.rs  sss.rs  sss_with_password.rs
sumcheck/: Cargo.toml
sumcheck/benches/: criterion.rs  mod.rs  sumcheck.rs  sumcheck_benchmarks.rs
sumcheck/src/: gkr_sumcheck.rs  lib.rs  prover.rs  sumcheck_over_multilinear.rs  verifier.rs
transcript/: Cargo.toml
transcript/benches/: criterion.rs  fiat_shamir_transcript_benchmarks.rs  mod.rs
transcript/src/: lib.rs
