[package]
name = "gkr"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-ff = "0.5.0"
sha3 = "0.10.8"
polynomials = { path = "../polynomials" }
circuit = { path = "../circuit" }
transcript = { path = "../transcript" }
sumcheck = { path = "../sumcheck" }

[dev-dependencies]
ark-bls12-381 = "0.5.0"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8.5"
