[package]
name = "shamir-secret-sharing"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-ff = "0.5.0"
rand = "0.8.5"
polynomials = {path = "../polynomials"}

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
ark-bls12-381 = "0.5.0"

[[bench]]
name = "criterion"
harness = false
