[package]
name = "sumcheck"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-ff = "0.5.0"
rand = "0.8.5"
ark-bls12-381 = "0.5.0"
polynomials = { path = "../polynomials" }
transcript = { path = "../transcript" }
sha3 = "0.10.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
field-tracker = { git = "https://github.com/sublinearlabs/field-tracker", branch = "main" }
ark-bls12-381 = "0.5.0"

# [[bench]]
# name = "criterion"
# harness = false